# music-video-metadata

./: .gitignore  README.md  extract_music_metadata.py  pyproject.toml
.github/workflows/: lint.yml
